Harden media player API and projection support